aligned sectionheader, fixed contact page ui, changed home page background color to white

--- a/src/pages/ContactUs/style.css
+++ b/src/pages/ContactUs/style.css
@@ -1,5 +1,6 @@
-.header {
-  margin-top: 10vh;
+.contact-section-header {
+  padding-top: 80px;
+  width: 100%;
 }
 .contact-box {
   background-color: #E9F3E7;
